[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/dialogs/dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/dialogs/radio_dialog/radio_dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/animations/gui/dialogs/radio_dialog/show.tres" type="Animation" id=3]
[ext_resource path="res://assets/animations/gui/dialogs/radio_dialog/hide.tres" type="Animation" id=4]
[ext_resource path="res://assets/audio/interface/speech.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.0509804, 0.219608, 0.133333, 0.501961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.560784, 0.980392, 0.215686, 1 )
anti_aliasing = false

[node name="RadioDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
anims/hide = ExtResource( 4 )
anims/show = ExtResource( 3 )

[node name="SpeechPlayer" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 5 )
mix_target = 2
bus = "Interface"

[node name="TypeTimer" type="Timer" parent="." index="3"]
wait_time = 0.04
one_shot = true

[node name="BackgroundRect" type="ColorRect" parent="." index="4"]
visible = false
modulate = Color( 0.678431, 0.0941176, 0.0941176, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.219608, 0.133333, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="RichTextLabel" parent="BackgroundRect" index="0"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -128.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/normal = SubResource( 1 )
custom_colors/default_color = Color( 0.945098, 0.94902, 0.945098, 1 )
custom_constants/line_separation = 2
visible_characters = 0
percent_visible = 0.0
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TypeTimer" to="." method="_on_type_timer_timeout"]
